[tool.poetry]
name = "email-sender"
version = "0.1.0"
description = ""
authors = ["egorzh <egor2001zhukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
file-manager = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "file_manager"}
aiosmtplib = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
