[tool.poetry]
name = "file-manager"
version = "0.1.0"
description = ""
authors = ["egorzh <egor2001zhukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "1.27.0"
starlette = "^0.41.3"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
