[tool.poetry]
name = "jsony_responses"
version = "0.1.0"
description = ""
authors = ["Egor Zhukov <egor2001zhukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsony = {git = "https://github.com/eac0de/u_utils", subdirectory = "jsony"}
starlette = "^0.41.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
