[tool.poetry]
name = "qp-translator"
version = "0.1.0"
description = ""
authors = ["egorzh <egor2001zhukov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.41.3"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
