[tool.poetry]
name = "requester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
errors = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "errors"}
aiohttp = "^3.11.11"
beanie = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
