[tool.poetry]
name = "sftper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
file-manager = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "file_manager"}
asyncssh = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
